# abhiyaan-app

./: README.md
.obsidian/: workspace.json
Q1 - Controlling Chaos/: PID.py  Position_Control.py  README.md  System.py  Velocity_Control.py  cascaded_control.py
Q2 - The Voltage Saga/: README.md
Q2 - The Voltage Saga/abhiyaan_PDB/: abhiyaan_PDB-eagle-import.kicad_sym  abhiyaan_PDB.kicad_prl  abhiyaan_PDB.kicad_pro  abhiyaan_PDB.kicad_sch  sym-lib-table
Q3 - Wired to Wireless Transition/: README.md
Q3 - Wired to Wireless Transition/CubeMX project/LED_Blink/: .cproject  .mxproject  .project  LED_Blink.ioc
Q3 - Wired to Wireless Transition/Proteus sim/: LED_Blink_stm32F401RE.pdsprj  LED_Blink_stm32F401RE.pdsprj.DESKTOP-156VPGH.SANMITRA.workspace
Q3 - Wired to Wireless Transition/Proteus sim/Project Backups/: LED_Blink_stm32F401RE [20260126, 12-14-55].pdsprj  LED_Blink_stm32F401RE [20260126, 12-22-50].pdsprj  LED_Blink_stm32F401RE [20260126, 12-22-51].pdsprj  LED_Blink_stm32F401RE [20260126, 12-23-00].pdsprj  LED_Blink_stm32F401RE [20260126, 12-24-01].pdsprj  LED_Blink_stm32F401RE [Autosaved].pdsprj
Q4 - Are We There Yet_/: Encoder_log.csv  QEI_Readings.csv  README.md  analysis.py
Q5 - Establishing Connections/: README.md
Q5 - Establishing Connections/src/monitoring_sys_interfaces/: CMakeLists.txt  package.xml
Q5 - Establishing Connections/src/monitoring_system/: package.xml  setup.py
Q5 - Establishing Connections/src/monitoring_system/monitoring_system/: checker.py  differentiator.py  gps.py
Q5 - Establishing Connections/src/turtle_brownie/: setup.cfg  (+2 more)
(+20 files in other folders)
